# project1

./: .gitignore  Cargo.toml  Makefile  justfile  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  todolist.md
app/: package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  image_cache.rs  lib.rs  protocol.rs
core/: Cargo.toml
core/src/: lib.rs  types.rs
core/src/cache/: disk.rs  memory.rs  mod.rs
core/src/codec/: image.rs  mod.rs
core/src/fs/: archive.rs  folder.rs  mod.rs  util.rs
core/src/keymap/: layout.rs  mod.rs
core/src/log/: mod.rs
core/src/meta/: comicinfo.rs  mod.rs
core/src/pipeline/: mip.rs  mod.rs  queue.rs  resize.rs  tile.rs
core/src/stats/: mod.rs
core/src/store/: mod.rs  progress.rs
core/tests/: cache_pipeline_test.rs  fs_sorting_test.rs  image_pipeline_test.rs
e2e/: hold.cjs  noop.cjs  package.json  playwright.config.ts  playwright.manual.config.ts  playwright.no-server.config.ts  run-ui-dev.cjs  tsconfig.json
e2e/playwright-report/: index.html
e2e/tests/: reader.spec.ts
ui/: components.json  eslint.config.js  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/reader/: command-palette.tsx  glyphs.tsx  index.ts  keymap-editor.tsx  page-groups.ts  reader-canvas.tsx  reader-overlay.tsx  reader-viewport.tsx  settings-sheet.tsx  thumb-sidebar.tsx  (+2 more)
ui/src/ipc/: client.ts  mock.ts  types.ts
ui/src/lib/: keymap.ts  preferences.ts
ui/src/styles/: globals.css
ui/src/workers/: renderer.worker.ts
(+7 files in other folders)
