[package]
name = "app"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.4.1", features = [] }
reader-core = { path = "../../core" }
percent-encoding = "2.3"
directories = "5.0"
tracing = { workspace = true }
tauri-plugin-dialog = "2.0.3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
